# fastapi-streamlit-starter

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  dev.sh  docker-compose.local.yml  docker-compose.production.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: config.py  main.py
compose/local/api/: Dockerfile  start
compose/local/ui/: Dockerfile  start
compose/production/api/: Dockerfile  entrypoint  start
docs/: contributing.md  history.md  index.md
requirements/: dev.in  main.in  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
ui/: 01_🏠_Home.py  config.py
ui/pages/: 02_📓_About.py
