[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "fastapi-streamlit-starter"
version = "0.0.1"
description = "FastAPI Streamlit Starter"
homepage = "https://hayabhay.github.io/fastapi-streamlit-starter"
repository = "https://github.com/hayabhay/fastapi-streamlit-starter"
documentation = "https://hayabhay.github.io/fastapi-streamlit-starter/docs"
authors = ["Abhay Kashyap"]
readme = "README.md"
license =  "MIT"

[tool.poetry.urls]
Changelog = "https://github.com/hayabhay/fastapi-streamlit-starter/releases"

[tool.poetry.dependencies]
python = "^3.12.5"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
fastapi = "^0.112.0"
httpx = "^0.27.0"
uvicorn = "^0.30.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pip = "^24.2"
pre-commit = "^3.8.0"
ruff = "^0.5.7"
streamlit = "^1.37.1"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"

[tool.poetry.group.gcp]
optional = true

[tool.poetry.group.gcp.dependencies]
google-cloud-secret-manager = "^2.20.2"
google-cloud-logging = "^3.11.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
tox = "^4.17.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocs-autorefs = "^1.0.1"
mkdocs-include-markdown-plugin = "^6.2.1"
mike = "^2.1.2"

# ==== ruff ====
[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

# ==== Coverage ====
[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tests"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
